--- a/TonejsTest 2DO.html
+++ b/TonejsTest 2DO.html
@@ -14,20 +14,26 @@
 </head>
 
 
-<div class="waiting_title">
+<div >
     Producer E87
 </div>
 
 
 <body>
     <main>
-        <audio src="C:\Users\Juli\My Projects\Producer_E87\audio/03 Phased Sleppy Noise Loop.mp3"></audio>
-        <button data-playing="false" role="switch" aria-checked="false">
-            <span>Play/Pause</span>
-            </button>
-            
+        <audio src="https://juliavra.github.io/Producer_E87_webSite/audio/03 Phased Sleppy Noise Loop.mp3"></audio>
+
+        <br><br><br>
+        <button id="starts_context" onclick="startOscillator()">START</button>
+        <button id="stopsOscillator" onclick="stopsOscillator()">STOP</button>
+        vol 1
+        <input type="range" id="volume1" min="0" max="2" value="1" step="0.01" />
+        pan 1
+        <input type="range" id="panner1" min="-1" max="1" value="0" step="0.01" />
+        vol 2
+        <input type="range" id="volume2" min="0" max="2" value="1" step="0.01" />
+        pan 2
+        <input type="range" id="panner2" min="-1" max="1" value="0" step="0.01" />
     </main>
     <script src="js/ToneTest2do.js"></script>
 </body>
-
-
