--- a/noads.html
+++ b/noads.html
@@ -17,70 +17,14 @@
 <body>
     <div class="contenedor">
         <header class="header"></header>
-        <!--
-        <audio src="audio/Hip Hop 1.mp3" id="snd_header"></audio>
-        <nav class="nav" id="nav_Menu">
-            <a href="index.html"> News</a>
-            <a href="brazil_2050.html"> Toyz</a>
-            <a href="bio.html"> Bio</a>
-            <a href="music.html"> Music</a>
-            <a href="contacto.html"> Contacto</a>
-        </nav>
-        -->
         <main class="main">
-<!--
-            <div id="lastStream">
-                <p>
-                <div class="video1">
-
-                    <iframe class="yt1" 
-                    src="https://www.youtube.com/embed/OiiFzUfT4zY?si=SZNvLpmLYJduqO_U" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-
-                    <h6> </h6>
-                </div>
-                </p>
-            </div>
-        -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/8KPO37dAWKg?si=tWi1K7ZfSsZ0QJSQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jDxFwDNTpV8?si=rDwQJ5qXh90Q5t0J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br>
             <p>
             </p>
             <div>
-
             </div>
         </main>
-
-        <!--
-        <footer class="footer">
-            <div id="icon">
-
-                <div class="icono">
-                    <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img
-                            src="img/facebook.svg" alt="facebook" width="50" height="50"> </a>
-                </div>
-                <div class="icono">
-                    <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
-                            alt="instagram" width="50" height="50"></a>
-
-                </div>
-                <div class="icono">
-                    <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img
-                            src="img/twitter.svg" width="50" alt="twitter" height="50"></a>
-                </div>
-                <div class="icono">
-                    <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
-                            alt="youtube" width="60" height="60"></a>
-                </div>
-            </div>
-            <div>
-                © Producer E87
-            </div>
-        </footer>
-        -->
-
     </div>
 
     <script src="js/index.js"></script>
