--- a/sublow.html
+++ b/sublow.html
@@ -12,7 +12,7 @@
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/tone3.js"></script>
+    <script src="js/sublow.js"></script>
     <!--
     <script src="https://unpkg.com/tone"></script>
     -->
