--- a/sublow.html
+++ b/sublow.html
@@ -11,6 +11,11 @@
 
     <button id="playButton" onclick="startsSong()">Iniciar </button>
 
+			<div id="content">
+				INVESTIGAR TONE.METER
+			</div>
+	
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/sublow.js"></script>
     <!--
