--- a/htmDePruebas.html
+++ b/htmDePruebas.html
@@ -14,7 +14,8 @@
 
     <p id="volume_key_text"></p>
     <p id="volume_key_value"></p>
-    <input type='range' min=0 max=1 step='0.01' value=1 id='volume_key'>
+    <input type='range' min=-60 max=0 step='1' 
+    value=1 id='volume_key'>
     <br>
 
 
